--- a/kitty.conf
+++ b/kitty.conf
@@ -1,15 +1,15 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
-#: Fonts {{{
+Fonts {{{
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-  font_family      CaskaydiaCove Nerd Font
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+  font_family      Caskaydia Nerd Font
+  bold_font        CaskaydiaCove NF Bold
+  italic_font      CaskaydiaCove NF Italic
+  bold_italic_font CaskaydiaCove NF SemiBold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -147,7 +147,7 @@
 #: monitor DPI to arrive at a pixel value. There must be four values
 #: corresponding to thin, normal, thick, and very thick lines.
 
-#: }}}
+}}}
 
 : Cursor customization {{{
 
@@ -412,7 +412,7 @@
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+enabled_layouts tall:bias=50;full_size=1;m
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
